Resources/Network Policies/egress_deny_port.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: foo-deny-external-egress
spec:
  podSelector:
    matchLabels:
      app: foo
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 9200
      protocol: TCP
    - port: 9300
      protocol: TCP
  - to:
    - namespaceSelector: {}
